...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:toolbarId="@id/toolbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/CustomToolbarTheme"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="50dp"
...
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:tabTextColor="#007FE1" />

    </com.google.android.material.appbar.AppBarLayout>
...
