<resources>
    <string name="app_name">TMDB</string>
    <string name="movies">Movies</string>
    <string name="tvShow">Tv Shows</string>

    <string name="Item_Poster">item_poster</string>
    <string name="description">Description</string>
    <string name="bgPoster">Background Poster</string>
    <string name="poster">Poster Poster</string>
    <string name="logoSplah">Logo Splash</string>
    <string name="minutes">Minutes</string>
    <string name="percent">%</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="empty_state_title_no_favorite_item">No favorites yet</string>
    <string name="empty_state_desc_no_favorite_item_movie">You don\'t have a list of favorite movies</string>
    <string name="empty_state_desc_no_favorite_item_tvshow">You don\'t have a list of favorite tv show</string>
    <string name="no_favorites">No Favorites</string>


</resources>